# D4rkBotKt

./: .gitignore  Procfile  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle.yml
D4rkBotKtMain/: build.gradle.kts
D4rkBotKtMain/src/main/kotlin/com/github/davidffa/d4rkbotkt/: Credentials.kt  D4rkBot.kt  Database.kt  Launcher.kt  Translator.kt
D4rkBotKtMain/src/main/resources/: logback.xml
D4rkBotKtMain/src/main/resources/locales/: en.yml  pt.yml
D4rkBotKtMain/src/main/resources/natives/darwin-aarch64/: libmp3encoder.dylib
D4rkBotNatives/: CMakeLists.txt  Mp3Encoder.c  build.gradle  natives.gradle
D4rkBotNatives/lame/: CMakeLists.txt
src/main/kotlin/me/davidffa/d4rkbotkt/: Credentials.kt  D4rkBot.kt  Database.kt  Launcher.kt  Translator.kt
src/main/kotlin/me/davidffa/d4rkbotkt/audio/: AudioPlayerSendHandler.kt  GuildMusicManager.kt  PlayerManager.kt  Track.kt  TrackScheduler.kt  UnresolvedTrack.kt
src/main/kotlin/me/davidffa/d4rkbotkt/audio/filters/: Filter.kt  FilterFactory.kt
src/main/kotlin/me/davidffa/d4rkbotkt/audio/receive/: AudioReceiver.kt  ReceiverManager.kt
src/main/kotlin/me/davidffa/d4rkbotkt/audio/sources/: Deezer.kt  Spotify.kt
src/main/kotlin/me/davidffa/d4rkbotkt/audio/spotify/: Spotify.kt  SpotifyTrack.kt
src/main/kotlin/me/davidffa/d4rkbotkt/command/: Command.kt  CommandContext.kt  CommandManager.kt  ICommandContext.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/: Help.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/dev/: Eval.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/info/: Avatar.kt  Botinfo.kt  Channelinfo.kt  Invite.kt  Ping.kt  Roleinfo.kt  Serverinfo.kt  Uptime.kt  Userinfo.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/music/: Filters.kt  Loop.kt  Nowplaying.kt  Pause.kt  Play.kt  Playlist.kt  Queue.kt  Remove.kt  Resume.kt  Search.kt  Seek.kt  Shuffle.kt  Skip.kt  Stop.kt  Volume.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/others/: Github.kt  Record.kt  Render.kt
src/main/kotlin/me/davidffa/d4rkbotkt/commands/settings/: Djrole.kt  Logs.kt  Setlang.kt  Setprefix.kt
src/main/kotlin/me/davidffa/d4rkbotkt/database/: BotDB.kt  GuildCache.kt  GuildDB.kt  UserDB.kt
src/main/kotlin/me/davidffa/d4rkbotkt/events/: EventManager.kt
src/main/kotlin/me/davidffa/d4rkbotkt/events/listeners/: GuildJoin.kt  GuildLeave.kt  GuildMemberJoin.kt  GuildMemberRemove.kt  GuildMessageDelete.kt  GuildMessageReceived.kt  GuildVoiceJoin.kt  GuildVoiceLeave.kt  GuildVoiceMove.kt  MessageDelete.kt  Ready.kt  (+1 more)
src/main/kotlin/me/davidffa/d4rkbotkt/lavaplayer/: AudioPlayerSendHandler.kt  GuildMusicManager.kt  PlayerManager.kt  Track.kt  TrackScheduler.kt
src/main/kotlin/me/davidffa/d4rkbotkt/utils/: Utils.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/: D4rkBot.kt  Database.kt  EventListener.kt  Main.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/command/: Command.kt  CommandContext.kt  CommandManager.kt  ICommandContext.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/commands/: Help.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/database/: BotDB.kt  GuildDB.kt  UserDB.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/lavaplayer/: AudioPlayerSendHandler.kt  GuildMusicManager.kt  PlayerManager.kt  Track.kt  TrackScheduler.kt
src/main/kotlin/net/d4rkb/d4rkbotkt/utils/: GuildCache.kt  Utils.kt
src/main/resources/: logback.xml
src/main/resources/locales/: en.yml  pt.yml
(+110 files in other folders)
